--- a/index.html
+++ b/index.html
@@ -4,9 +4,27 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css">
     <title>Vite App</title>
   </head>
   <body>
+
+    <div class="inicio">
+      <header>
+        <h1 class="logo">João Riuzim</h1>
+        <nav>
+          <ul class="nav_links">
+            <li><a href="#">Inicio</a></li>
+            <li><a href="#">Sobre mim</a></li>
+            <li><a href="#">Projetos</a></li>
+          </ul>
+        </nav>
+        <a href="#" class="cta"><button>Contato</button></a>
+      </header>
+    </div>
+
+    <div class="sobre_mim"></div>
+
     <script type="module" src="/main.js"></script>
   </body>
 </html>
