--- a/index.html
+++ b/index.html
@@ -21,10 +21,15 @@
         </nav>
         <a href="#" class="cta"><button>Contato</button></a>
       </header>
+      <!--<div class="img_box">
+        <img src="pfp.jpg" alt="" class="pfp">
+      </div>-->
+      <canvas id="myCanvas" width="480" height="320"></canvas>
+      <button id="runButton">Start game</button>
     </div>
 
     <div class="sobre_mim"></div>
 
-    <script type="module" src="/main.js"></script>
+    <script type="module" src="main.js"></script>
   </body>
 </html>
