--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
   </head>
   <body>
 
-    <div class="inicio">
+    <div class="inicio" id="inicio">
       <header>
         <h1 class="logo">João Riuzim</h1>
         <nav>
           <ul class="nav_links">
-            <li><a href="#">Inicio</a></li>
-            <li><a href="#">Sobre mim</a></li>
+            <li><a href="#inicio">Inicio</a></li>
+            <li><a href="#sobre_mim">Sobre mim</a></li>
             <li><a href="#">Projetos</a></li>
           </ul>
         </nav>
@@ -24,11 +24,9 @@
       <!--<div class="img_box">
         <img src="pfp.jpg" alt="" class="pfp">
       </div>-->
-      <canvas id="myCanvas" width="480" height="320"></canvas>
-      <button id="runButton">Start game</button>
     </div>
 
-    <div class="sobre_mim"></div>
+    <div class="sobre_mim" id="sobre_mim"></div>
 
     <script type="module" src="main.js"></script>
   </body>
