--- a/index.html
+++ b/index.html
@@ -11,7 +11,18 @@
 
     <div class="inicio" id="inicio">
       <header>
-        <h1 class="logo">João Riuzim</h1>
+        <div class="logo">
+          <a href="#" class="name">J</a>
+          <a href="#" class="name">o</a>
+          <a href="#" class="name">ã</a>
+          <a href="#" class="spc name">o</a> 
+          <a href="#" class="name">R</a>
+          <a href="#" class="name">i</a>
+          <a href="#" class="name">u</a>
+          <a href="#" class="name">z</a>
+          <a href="#" class="name">i</a>
+          <a href="#" class="name">m</a>
+        </div>
         <nav>
           <ul class="nav_links">
             <li><a href="#inicio">Inicio</a></li>
@@ -21,12 +32,24 @@
         </nav>
         <a href="#" class="cta"><button>Contato</button></a>
       </header>
-      <!--<div class="img_box">
+
+      <div class="faixa">
+        <div class="grau_holder">
+          <div class="grau g1"></div>
+          <div class="grau g2"></div>
+          <div class="grau g3"></div>
+        </div>
+      </div>
+
+      <div class="img_box">
         <img src="pfp.jpg" alt="" class="pfp">
-      </div>-->
+      </div>
+
     </div>
 
-    <div class="sobre_mim" id="sobre_mim"></div>
+    <div class="sobre_mim" id="sobre_mim">
+
+    </div>
 
     <script type="module" src="main.js"></script>
   </body>
