--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
       <div class="img_box">
         <img src="pfp.jpg" alt="" class="pfp">
       </div>
-
+      <div class="txt_box"></div>
     </div>
 
     <div class="sobre_mim" id="sobre_mim">
